crates/wasmer-pack/src/py/snapshots/wasmer_pack__py__tests__generated_files-2.snap
---
source: crates/wit-pack/src/py/mod.rs
expression: "files[\"MANIFEST.in\"].utf8_contents().unwrap()"
---
include wasmer_pack/py.typed
include wasmer_pack/bindings/wasmer_pack/*.wasm
include wasmer_pack/commands/*.wasm
