crates/wasmer-pack/src/py/snapshots/wasmer_pack__py__tests__generated_files-3.snap
---
source: crates/wasmer-pack/src/py/mod.rs
expression: "files[\"wasmer_pack/__init__.py\"].utf8_contents().unwrap().replace(crate::GENERATOR,\n    \"XXX\")"
---
'''
Bindings to wasmer/wasmer-pack v1.2.3.
'''

# Generated by XXX.

from wasmer import Store as _Store # type: ignore
from .commands import Commands as _Commands
from .bindings import Bindings as _Bindings

__version__ = "1.2.3"

_store = _Store()
bindings = _Bindings(_store)
commands = _Commands(_store)
