crates/wasmer-pack/src/py/snapshots/wasmer_pack__py__tests__generated_files-6.snap
---
source: crates/wit-pack/src/py/mod.rs
expression: "files[\"wasmer_pack/py.typed\"].utf8_contents().unwrap()"
---

